--- a/FE/package.json
+++ b/FE/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
+    "@service-work/is-loading": "^6.2.3",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.4",
+    "local-storage": "^2.0.0",
     "ng-zorro-antd": "^15.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
