--- a/FE/package.json
+++ b/FE/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -22,6 +22,7 @@
     "@service-work/is-loading": "^6.2.3",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
+    "cors": "^2.8.5",
     "local-storage": "^2.0.0",
     "ng-zorro-antd": "^15.1.0",
     "rxjs": "~7.8.0",
