--- a/eShopSolution/eShopSolution.BackendApi/appsettings.Development.json
+++ b/eShopSolution/eShopSolution.BackendApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "eShopSolutionDb": "Server=.;Database=eShopSolution;Trusted_Connection=True;"
+    "eShopSolutionDb": "Server=TANKV\\SQL2022;Database=eShopSolution;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
