--- a/eShopSolution/eShopSolution.ViewModels/eShopSolution.ViewModels.csproj
+++ b/eShopSolution/eShopSolution.ViewModels/eShopSolution.ViewModels.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\eShopSolution.Data\eShopSolution.Data.csproj" />
+  </ItemGroup>
 </Project>
