--- a/FE/package.json
+++ b/FE/package.json
@@ -19,13 +19,16 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@auth0/angular-jwt": "^5.1.2",
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "@service-work/is-loading": "^6.2.3",
+    "@types/googlemaps": "^3.39.13",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
     "cors": "^2.8.5",
     "local-storage": "^2.0.0",
     "ng-zorro-antd": "^15.1.0",
+    "ngx-cookie-service": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
