--- a/eShopSolution/eShopSolution.BackendApi/appsettings.Development.json
+++ b/eShopSolution/eShopSolution.BackendApi/appsettings.Development.json
@@ -3,6 +3,12 @@
     "eShopSolutionDb": "Server=.;Database=eShopSolution;Trusted_Connection=True;",
     "Redis": "redis-11413.c295.ap-southeast-1-1.ec2.cloud.redislabs.com:11413,password=hGvQRMD6zF10XZ88RvJIpyEBNhohOqZ8"
   },
+  "VNpayApi": {
+    "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "ReturnUrl": "https://localhost:5001/api/Payment/payment-confirm",
+    "TmnCode": "UA0OTTTU",
+    "HashSecret": "VMXCFNOSEJPODJNCCNLTVPYYCWTLOMLN"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
