--- a/eShopSolution/eShopSolution.WebApp/appsettings.Development.json
+++ b/eShopSolution/eShopSolution.WebApp/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "VNpayApi": {
+    "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "ReturnUrl": "https://localhost:5003/Home/PaymentConfirm",
+    "TmnCode": "UA0OTTTU",
+    "HashSecret": "VMXCFNOSEJPODJNCCNLTVPYYCWTLOMLN"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
