--- a/eShopSolution/eShopSolution.BackendApi/appsettings.Development.json
+++ b/eShopSolution/eShopSolution.BackendApi/appsettings.Development.json
@@ -5,7 +5,7 @@
   },
   "VNpayApi": {
     "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "ReturnUrl": "https://localhost:5001/api/Payment/payment-confirm",
+    "ReturnUrl": "http://127.0.0.1:5500/1.html",
     "TmnCode": "UA0OTTTU",
     "HashSecret": "VMXCFNOSEJPODJNCCNLTVPYYCWTLOMLN"
   },
