--- a/FE/package.json
+++ b/FE/package.json
@@ -26,11 +26,13 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
     "cors": "^2.8.5",
+    "guid-typescript": "^1.0.9",
     "local-storage": "^2.0.0",
     "ng-zorro-antd": "^15.1.0",
     "ngx-cookie-service": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
