--- a/eShopSolution/eShopSolution.BackendApi/appsettings.Development.json
+++ b/eShopSolution/eShopSolution.BackendApi/appsettings.Development.json
@@ -6,7 +6,7 @@
   },
   "VNpayApi": {
     "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "ReturnUrl": "http://127.0.0.1:5500/1.html",
+    "ReturnUrl": "http://localhost:4200",
     "TmnCode": "UA0OTTTU",
     "HashSecret": "VMXCFNOSEJPODJNCCNLTVPYYCWTLOMLN"
   },
