--- a/FE/package.json
+++ b/FE/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "@microsoft/signalr": "^7.0.7",
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "@service-work/is-loading": "^6.2.3",
     "@types/googlemaps": "^3.39.13",
