External Login with facebook & google

--- a/eShopSolution/eShopSolution.AdminApp/appsettings.Development.json
+++ b/eShopSolution/eShopSolution.AdminApp/appsettings.Development.json
@@ -2,5 +2,17 @@
   "VNpayApi": {
     "HashSecret": "VMXCFNOSEJPODJNCCNLTVPYYCWTLOMLN"
   },
-  "BaseAddress": "https://localhost:5001"
+  "BaseAddress": "https://localhost:5001",
+  "FaceBookSetting": {
+    "FacebookAppId": "1014494649925287",
+    "FacebookAppSecret": "b80bde82fec86e222d0576fbe40c36f3",
+    "FacebookRedirectUri": "https://localhost:5002/Login/FaceBookExtenalLogin"
+  },
+  "GoogleSetting": {
+    "GoogleClientId": "954565178568-qoggp5vasnt3rrloqpnhrtig0fbv7o63.apps.googleusercontent.com",
+    "GoogleRedirectUri": "https://localhost:5002/Login/GoogleExtenalLogin",
+    "Scope": "https://www.googleapis.com/auth/bigquery",
+    "ClientSecret": "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"
+  }
+
 }
