--- a/eShopSolution/eShopSolution.BackendApi/appsettings.Development.json
+++ b/eShopSolution/eShopSolution.BackendApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "eShopSolutionDb": "Server=TANKV\\SQL2022;Database=eShopSolution;Trusted_Connection=True;",
+    "eShopSolutionDb": "Server=.;Database=eShopSolution;Trusted_Connection=True;",
     "Redis": "redis-11413.c295.ap-southeast-1-1.ec2.cloud.redislabs.com:11413,password=hGvQRMD6zF10XZ88RvJIpyEBNhohOqZ8"
   },
   "VNpayApi": {
