--- a/eShopSolution/eShopSolution.Data/appsettings.json
+++ b/eShopSolution/eShopSolution.Data/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "eShopSolutionDb": "Server=TANKV\\SQL2022;Database=eShopSolution;Trusted_Connection=True;"
+    "eShopSolutionDb": "Server=.;Database=eShopSolution;Trusted_Connection=True;"
 
   }
 }
