--- a/eShopSolution/eShopSolution.AdminApp/eShopSolution.AdminApp.csproj
+++ b/eShopSolution/eShopSolution.AdminApp/eShopSolution.AdminApp.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.2" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.34.0" />
     <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="2.19.0" />
