--- a/eShopSolution/eShopSolution.ViewModels/eShopSolution.ViewModels.csproj
+++ b/eShopSolution/eShopSolution.ViewModels/eShopSolution.ViewModels.csproj
@@ -12,4 +12,8 @@
   <ItemGroup>
     <ProjectReference Include="..\eShopSolution.Data\eShopSolution.Data.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Statistic\" />
+  </ItemGroup>
 </Project>
