Email verification method & Fix admin page performance

--- a/eShopSolution/eShopSolution.BackendApi/appsettings.json
+++ b/eShopSolution/eShopSolution.BackendApi/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "EmailConfig": {
+    "Server": "smtp.gmail.com",
+    "Port": "587",
+    "SenderName": "Admin",
+    "SenderEmail": "hoangnhu300901@gmail.com",
+    "Account": "hoangnhu300901@gmail.com",
+    "Password": "jrfrrxkppdcakgvu",
+    "EmailContent": "assets/client/htmlpage.html"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
