--- a/eShopSolution/eShopSolution.BackendApi/eShopSolution.BackendApi.csproj
+++ b/eShopSolution/eShopSolution.BackendApi/eShopSolution.BackendApi.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+    <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.111" />
     <PackageReference Include="StackExchange.Redis.Extensions.Newtonsoft" Version="9.1.0" />
@@ -26,6 +27,12 @@
   <ItemGroup>
     <Folder Include="wwwroot\user-content\NewFolder\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\assets\client\htmlpage.html" />
+  </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="https://json.schemastore.org/babelrc.json" /></VisualStudio></ProjectExtensions>
 
 
 
