--- a/eShopSolution/eShopSolution.AdminApp/appsettings.Development.json
+++ b/eShopSolution/eShopSolution.AdminApp/appsettings.Development.json
@@ -11,7 +11,7 @@
   "GoogleSetting": {
     "GoogleClientId": "954565178568-qoggp5vasnt3rrloqpnhrtig0fbv7o63.apps.googleusercontent.com",
     "GoogleRedirectUri": "https://localhost:5002/Login/GoogleExtenalLogin",
-    "Scope": "https://www.googleapis.com/auth/bigquery",
+    "Scope": "https://www.googleapis.com/auth/userinfo.email",
     "ClientSecret": "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"
   }
 
