--- a/eShopSolution/eShopSolution.AdminApp/eShopSolution.AdminApp.csproj
+++ b/eShopSolution/eShopSolution.AdminApp/eShopSolution.AdminApp.csproj
@@ -24,4 +24,6 @@
     <ProjectReference Include="..\eShopSolution.Utilities\eShopSolution.Utilities.csproj" />
     <ProjectReference Include="..\eShopSolution.ViewModels\eShopSolution.ViewModels.csproj" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1development_1json__JsonSchema="https://cdn.jsdelivr.net/gh/tarampampam/error-pages@latest/schemas/config/1.0.schema.json" /></VisualStudio></ProjectExtensions>
 </Project>
