--- a/eShopSolution/eShopSolution.AdminApp/eShopSolution.AdminApp.csproj
+++ b/eShopSolution/eShopSolution.AdminApp/eShopSolution.AdminApp.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+	<ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
+
   </PropertyGroup>
 
   <ItemGroup>
