Add message queue

--- a/eShopSolution/eShopSolution.BackendApi/appsettings.json
+++ b/eShopSolution/eShopSolution.BackendApi/appsettings.json
@@ -8,6 +8,16 @@
     "Password": "jrfrrxkppdcakgvu",
     "EmailContent": "assets/client/htmlpage.html"
   },
+  "MessageQueueSetting": {
+    "Provider": "GOOGLE",
+    "Enabled": "true",
+    "EnablePublisher": "true",
+    "EnableSubscriber": "true",
+    "GoogleQueueSetting": {
+      "CredentialFile": "google_credential.json",
+      "ProjectId": "eshopdrink"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
